# MLang

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CMakeSettings.json  ExecuteFile.vcxproj  ExecuteFile.vcxproj.filters  INSTALL.md  MGrammar.g4  MLang.sln  MLang.vcxproj  MLang.vcxproj.filters  README.md  TODO.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  antlr4_runtime-build_shared.vcxproj  antlr4_runtime-build_shared.vcxproj.filters  antlr4_runtime-build_static.vcxproj  antlr4_runtime-build_static.vcxproj.filters  antlr4_runtime.vcxproj  antlr4_runtime.vcxproj.filters  check_memory.sh  exec.vcxproj  exec.vcxproj.filters  execLlvm.vcxproj  execLlvm.vcxproj.filters  grammar.txt  install.md  install.sh  makefile  roadmap.md  run_ExecuteFile.sh  run_tests.sh  tests.vcxproj  tests.vcxproj.filters  todo.md
.github/workflows/: cpp.yml
lib/: compile.sh  libprint.cpp  libtest.cpp  print.c  print.ll
mfiles/: 002_addition_infix.m  004_var_declaration_addition.m  006_method_declaration.m  007_method_declaration_brackets.m  012_while.m  TODO_method_declaration_arrow.m  TODO_recursion.m  TODO_str.m  addition.m  addition_infix.m  blob.m  broken_semantics.m  broken_syntax.m  comment.m  extern.m  function_without_return.m  if.m  if_else.m  if_else_no_brackets.m  ignored_return.m  infix_operator_precedence.m  invalid_extern_type_annotation.m  invalid_type_annotation.m  method_decl_multiline.m  method_declaration.m  method_declaration_brackets.m  method_variable_num_locals_0.m  method_variable_num_locals_1.m  multiple_vars.m  mutiple_vars.m  print_call.m  raylib.m  recursion.m  return_in_some_cases_0.m  return_in_some_cases_1.m  return_void_in_some_cases.m  simple.m  simple_fns.m  str.m  struct.m  (+6 more)
src/: .Mlang.cpp.swo  ExecuteFile.cpp  Logger.h  Mlang.cpp  Mlang.h  llvmMain.cpp  main.cpp
src/application/: ArgumentsParser.cpp  ArgumentsParser.h
src/ast/: DataType.cpp  DataType.h  Node.h
src/core/: Mlang.cpp  Mlang.h
src/emitter/: ByteCodeEmitter.cpp  ByteCodeEmitter.h  Emitter.cpp  Emitter.h  Python.cpp  Python.h
src/error/: Exceptions.cpp  Exceptions.h  GenerateMarkedCode.cpp  GenerateMarkedCode.h  TypeError.cpp  TypeError.h
src/exceptions/: Exceptions.h
src/executer/: ByteCode.cpp  ByteCode.h  ExternalFunctions.cpp  ExternalFunctions.h  LLVMRunner.cpp  LLVMRunner.h  Runner.cpp  Runner.h  Stack.cpp  Stack.h  Stack.hpp  Types.h  Windows.hpp
src/mains/: ExecuteFile.cpp  MLang.cpp  TestByteCode.cpp  Tests.cpp
src/parser/: OperatorPrecedence.cpp  OperatorPrecedence.h  ParseError.cpp  ParseError.h  Parser.cpp  Parser.h  PrintVisitor.cpp  PrintVisitor.h  PtToAstVisitor.cpp  PtToAstVisitor.h  SourcePosition.cpp  SourcePosition.h  Tokenizer.cpp  Tokenizer.h
src/preprocessor/: Preprocessor.cpp  Preprocessor.h
src/tests/: Tests.cpp
src/transformer/: .LLVMEmitter.h.swo  AddVoidReturn.cpp  AddVoidReturn.h  ApplyTypeAnnotations.cpp  ApplyTypeAnnotations.h  CollectTypes.cpp  CollectTypes.h  Emitter.cpp  Emitter.h  HasUnknownTypes.cpp  HasUnknownTypes.h  ImplicitReturn.cpp  ImplicitReturn.h  InfereIdentifierTypes.cpp  InfereIdentifierTypes.h  InfereParameterTypes.cpp  InfereParameterTypes.h  InstantiateFunctions.cpp  InstantiateFunctions.h  LLVMEmitter.cpp  LLVMEmitter.h  PrintListener.h  PrintVisitor.h  PtToAstVisitor.h  SampleListener.h  TreeWalker.cpp  TreeWalker.h  UpdateOffsets.cpp  UpdateOffsets.h
src/validator/: AllPathsReturn.cpp  AllPathsReturn.h  Validator.h
tools/: check_memory.sh  generate_single_header.py  headerlib.py
